Tue May 29 06:11:50 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i,xapian.i: Only rename operator() for languages
	  where SWIG doesn't already.  SWIG's %rename comes first and that
	  means ours was ignored previously for some languages, which is
	  liable to cause confusion.

Tue May 29 05:26:22 GMT 2012  Olly Betts <olly@survex.com>

	* php/Makefile.am: Add dependency on new generated except.i.

Tue May 29 03:53:25 GMT 2012  Olly Betts <olly@survex.com>

	* generic/generate-generic-exceptions: Ensure that generic subdirectory
	  exists to handle srcdir!=builddir from a clean tree.

Mon May 28 07:22:39 GMT 2012  Olly Betts <olly@survex.com>

	* doxygen_xml.conf.in: Hide new function attribute macros, and the
	  less new deprecation macros, from doxygen.

Sun May 27 13:47:44 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,generic/except.i,generic/generate-generic-exceptions:
	  Generate generic/except.i so we can skip exception handling for
	  XAPIAN_NOTHROW methods for all the remaining SWIG-generated bindings.

Sun May 27 13:37:06 GMT 2012  Olly Betts <olly@survex.com>

	* php/Makefile.am,php/except.i,php/generate-php-exceptions: Generate
	  php/except.i so we can skip exception handling for XAPIAN_NOTHROW
	  methods.

Sun May 27 12:57:29 GMT 2012  Olly Betts <olly@survex.com>

	* tcl8/Makefile.am,tcl8/except.i,tcl8/generate-tcl-exceptions: Generate
	  tcl8/except.i so we can skip exception handling for XAPIAN_NOTHROW
	  methods.

Sun May 27 12:37:37 GMT 2012  Olly Betts <olly@survex.com>

	* lua/Makefile.am,perl/Makefile.am,python/Makefile.am: Ship the scripts
	  which generate the except.i files.

Sun May 27 12:13:29 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore Xapian API class constructor taking
	  Internal& instead of Internal* (as Query does, to avoid an
	  ambiguity for Query(NULL).

Sun May 27 12:12:45 GMT 2012  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Fix to use tabs for indentation in