@@ -767,7 +767,7 @@ GENERATE_HTML          = NO
 
 # The HTML_OUTPUT tag is used to specify where the HTML docs will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
-# put in front of it. If left blank `html' will be used as the default path.
+# put in front of it. If left blank 'html' will be used as the default path.
 
 HTML_OUTPUT            = html
 
@@ -984,17 +984,17 @@ GENERATE_LATEX         = NO
 
 # The LATEX_OUTPUT tag is used to specify where the LaTeX docs will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
-# put in front of it. If left blank `latex' will be used as the default path.
+# put in front of it. If left blank 'latex' will be used as the default path.
 
 LATEX_OUTPUT           = latex
 
 # The LATEX_CMD_NAME tag can be used to specify the LaTeX command name to be
-# invoked. If left blank `latex' will be used as the default command name.
+# invoked. If left blank 'latex' will be used as the default command name.
 
 LATEX_CMD_NAME         = latex
 
 # The MAKEINDEX_CMD_NAME tag can be used to specify the command name to
-# generate index for LaTeX. If left blank `makeindex' will be used as the
+# generate index for LaTeX. If left blank 'makeindex' will be used as the
 # default command name.
 
 MAKEINDEX_CMD_NAME     =
@@ -1067,7 +1067,7 @@ GENERATE_RTF           = NO
 
 # The RTF_OUTPUT tag is used to specify where the RTF docs will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
-# put in front of it. If left blank `rtf' will be used as the default path.
+# put in front of it. If left blank 'rtf' will be used as the default path.
 
 RTF_OUTPUT             = rtf
 
@@ -1108,7 +1108,7 @@ GENERATE_MAN           = NO
 
 # The MAN_OUTPUT tag is used to specify where the man pages will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
-# put in front of it. If left blank `man' will be used as the default path.
+# put in front of it. If left blank 'man' will be used as the default path.
 
 MAN_OUTPUT             = man
 
@@ -1137,7 +1137,7 @@ GENERATE_XML           = YES
 
 # The XML_OUTPUT tag is used to specify where the XML pages will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
-# put in front of it. If left blank `xml' will be used as the default path.
+# put in front of it. If left blank 'xml' will be used as the default path.
 
 XML_OUTPUT             = doxygen-xml
 
@@ -1322,7 +1322,7 @@ ALLEXTERNALS           = NO
 EXTERNAL_GROUPS        = NO
 
 # The PERL_PATH should be the absolute path and name of the perl script
-# interpreter (i.e. the result of `which perl').
+# interpreter (i.e. the result of 'which perl').
 
 PERL_PATH              =
 
