@@ -1,6 +1,6 @@
-# Before `make install' is performed this script should be runnable with
+# Before 'make install' is performed this script should be runnable with
 # 	- Wrap new Query op OP_VALUE_RANGE and associated constructor.
-# `make test'. After `make install' it should work as `perl test.pl'
+# 'make test'. After 'make install' it should work as 'perl test.pl'
 
 # FIXME: these tests pass in the XS version.
 my $disable_fixme = 1;
