@@ -1,3 +1,8 @@
+Sat Jun 02 12:39:58 GMT 2012  Olly Betts <olly@survex.com>
+
+	* INSTALL,Makefile.am,README,debian/rules,doxygen_xml.conf.in,
+	  generic/generic.mk,perl/t/: Change `...' quoting in prose to '...'.
+
 Tue May 29 06:11:50 GMT 2012  Olly Betts <olly@survex.com>
 
 	* xapian-headers.i,xapian.i: Only rename operator() for languages
